--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 dj-database-url==0.5.0
 Django==1.11
-psycopg2==2.7.5
+gunicorn==19.9.0
+psycopg2-binary==2.7.5
 Pygments==2.2.0
 pytz==2018.5
 urwid==2.0.1
